--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ fill:#EF7413;
             "section-nav section-nav section-nav section-nav"
             "services services services services"
             "text text photo photo";
-        background-image: url(../public/servicesimg.jpg);
+        background-image: url(../public/servicesbground.JPG);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 0 -700px;
