--- a/css/reset.css
+++ b/css/reset.css
@@ -2,13 +2,13 @@
     --main-radius: 5px;
     --main-padding: 5px;
 
-    --fs-xl: 11.089rem;   /* 177.42px */
-    --fs-h1: 6.854rem;    /* 109.66px */
-    --fs-h2:4.236rem;     /* 67.77px */
-    --fs-h3: 2.618rem;    /* 41.89px */
-    --fs-h4: 1.618rem;    /* 25.89px */
-    --fs-p: 1rem;         /* 16.00px */
-    --fs-xs: 0.618rem;    /* 9.89px */
+    --fs-xl: 11.089em;   /* 177.42px */
+    --fs-h1: 6.854em;    /* 109.66px */
+    --fs-h2:4.236em;     /* 67.77px */
+    --fs-h3: 2.618em;    /* 41.89px */
+    --fs-h4: 1.618em;    /* 25.89px */
+    --fs-p: 1em;         /* 16.00px */
+    --fs-xs: 0.618em;    /* 9.89px */
 }
 
 * {
